User collapse fix

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10757,7 +10757,7 @@ a.text-dark:focus {
 @media screen and (max-width: 992px) {
   .navbar-collapse {
     display: block !important;
-    background-color: #f1f1f1s;
+    background-color: #f1f1f1;
     z-index: 900000;
     height: calc(100vh - 60px - 5px);
     transition: 0.5s all;
