--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -98,7 +98,7 @@
 .navbar-collapse {
   @media screen and (max-width: 992px) {
     display: block !important;
-    background-color: #f1f1f1s;
+    background-color: #f1f1f1;
     z-index: 900000;
     height: calc(100vh - 60px - 5px);
     transition: 0.5s all;
